# CLiCK-Backend

./: .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 06e990cb07eb_add_role_to_histories_table.py  0ebe2e175e0f_history_table_추가3.py  318295363df4_create_inital_tables.py  491037942457_history_table_추가.py  a7974644db79_create_inital_tables.py  aa8aa6eb6dd0_initial_schema.py  d9895543d461_history_table_추가2.py
app/: main.py
app/api/v1/: api.py
app/api/v1/routers/: gpt.py  test.py
app/core/: config.py  security.py
app/core/prompts/: improve_sys_prompt.txt  prompt_loader.py  recommend_sys_prompt1.txt  recommend_sys_prompt2.txt
app/db/: session.py
app/models/: __init__.py  event.py  history.py  user.py
app/schemas/: gpt.py
app/services/: event_service.py  history_service.py  user_service.py
